# goldfxgraph

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  dev.env  docker-compose.yml  pyproject.toml
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: App.vue  main.ts
data/raw/: xauusd_d.csv
design-system/: MASTER.md
design-system/pages/: dashboard.md  workflow-trace.md
docs/superpowers/plans/: 2026-05-22-bootstrap-fullstack-xauusd-forecast-dashboard.md  2026-05-23-gold-dashboard-redesign-and-eod-backfill.md  2026-05-23-goldfxgraph-glassmorphism-dashboard-rework.md  2026-05-23-openai-compatible-agents-and-auto-quote-discovery.md  2026-05-24-gold-forecast-feedback-loop.md  2026-05-24-goldfxgraph-black-green-gold-tech-dashboard.md  2026-05-24-goldfxgraph-market-data-db-ingestion.md  (+7 more)
src/goldfxgraph/: __init__.py  cli.py  timeframes.py
src/goldfxgraph/api/: app.py  (+3 more)
tests/: conftest.py  test_api.py  test_backfill.py  test_committee_schemas.py  test_contract_baseline.py  test_diagnostics.py  test_forecast_evaluation_persistence.py  test_forecast_evaluation_scheduler.py  test_forecast_history_api.py  test_indicators.py  test_maintenance_scheduler.py  test_market_data.py  test_market_data_repository.py  test_openai_client.py  test_persistence.py  test_pizza_index.py  test_prompt_registry.py  test_research_cli.py  test_research_scheduler.py  test_settings.py  test_tradingview_history.py  test_workflow.py
tests/fixtures/: tradingview_xauusd_page.html  tradingview_xauusd_page_broken.html
(+141 files in other folders)
