[project]
authors = [
  {name = "Michael", email = "michael.chow.tech@gmail.com"},
]
dependencies = [
  "asyncpg>=0.29.0",
  "fastapi>=0.124.0",
  "httpx>=0.28.1",
  "langchain>=1.2.11",
  "langchain-openai>=1.2.1",
  "langgraph>=1.2.0",
  "openai>=2.36.0",
  "pandas>=3.0.3",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.2",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.38.0",
]
description = "A LangGraph-based XAU/USD daily research agent."
name = "goldfxgraph"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
goldfxgraph = "goldfxgraph.cli:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.13,<0.12.0"]

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
]

[tool.ruff]
exclude = [
  ".codex",
]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = []
select = [
  "E", # pycodestyle 错误
  "F", # pyflakes 错误，比如未使用变量
  "I", # import 排序
  "UP", # Python 版本升级建议
  "B", # 常见 bug 风险
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.pyright]
exclude = [
  ".venv",
  "dist",
  "build",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
